adding to experience, rearrange html

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#employment">Employment</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#publications">Publications</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#funding">Funding</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
@@ -64,7 +64,7 @@
                         I am a developing researcher in the fields of proteomics, bioinformatics, and computer science. 
                         Currently I am focused on analytical innovation and computational modeling to aid in the profiling and 
                         characterization of the human glycoproteome, performing graduate research at the University of Wisconsin-Madison.
-                        Anticipating graduation in May, 2023, I am interested in gaining experience in industrial and governmental settings
+                        Anticipating graduation in March, 2023, I am interested in gaining experience in industrial and governmental settings
                         that allow me to exercise my technical expertise and strong communication and leadership skills.
                     </p>
                     <div class="row">
@@ -138,6 +138,107 @@
                             </ul>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">August 2018 - Present</span></div>
+                    </div>
+                </div>
+            </section>
+            <hr class="m-0" />
+            <!--Experience-->
+            <section class="resume-section" id="experience">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Research Experience</h2>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Graduate Research Assistant</h3>
+                            <div class="subheading mb-3">University of Wisconsin-Madison, PI: Lingjun Li</div>
+                            <ul class="exp-list-head">
+                                <li class="exp-list-item">
+                                    Fabricated and validated PGC-enabled nano separation methodologies that provide up to 40% greater 
+                                    protein, peptide, and glycopeptide identifications.
+                                </li>
+                                <li class="exp-list-item">
+                                    Identified chromatographic conditions most suitable for glycopeptide label-free quantitation, isomeric 
+                                    resolution, and MS-based profiling depth.
+                                </li>
+                                <li class="exp-list-item">
+                                    Utilized DIA-MS to identify 1,245 dysregulated proteins across six diagnostic patterns correlated 
+                                    with early-, mid-, and late-stage prostate cancer.
+                                </li>
+                                <li class="exp-list-item">
+                                    Coupled machine learning with DIA-MS to quantify >9,300 cerebrospinal fluid proteins and elucidate 
+                                    1,642 putative neurological disease markers across patient cohorts.
+                                </li>
+                                <li class="exp-list-item">
+                                    Engineered and deployed custom web-application based solutions for browsing, filtering, and sharing 
+                                    mass spectrometry data.
+                                </li>
+                                <li class="exp-list-item">
+                                    Performed custom informatic analysis of MALDI-MSI datasets to normalize multiplexed datasets, extract 
+                                    features of interest, and perform machine learning classification.
+                                </li>
+                                <li class="exp-list-item">
+                                    Development of novel online multiplexed analysis of bottom-up, middle-down, and top-down
+                                    glycoconjugate species utilizing capillary electrophoresis, porous graphitized carbon liquid
+                                    chromatography, ion mobility spectrometry, and mass spectrometry.
+                                </li>
+                                <li class="exp-list-item">
+                                    Leveraged custom liquid chromatography, capillary electrophoresis, and ion mobility to identify multiple 
+                                    conformations of active biomolecules.
+                                </li>
+                                <li class="exp-list-item">
+                                    Trained and led small research teams of new graduate students and non-expert scientists in the areas of 
+                                    biomolecular analysis, bioinformatic processing, and project development.
+                                </li>
+                                <li class="exp-list-item">
+                                    Maintained, serviced, and assisted in troubleshooting a variety of high-end mass spectrometers from several 
+                                    major vendors (Thermo, Bruker, Agilent).
+                                </li>
+                            </ul>
+                            <p></p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">August 2018 - Present</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Graduate Research Assistant</h3>
+                            <div class="subheading mb-3">University of Oklahoma, PI: Si Wu</div>
+                            <ul class="exp-list-head">
+                                <li class="exp-list-item">
+                                    Developed a three-dimensional method of glycopeptide purification and characterization 
+                                    allowing universal application, unbiased separation, and rapid recognition through the 
+                                    use of HPLC, concurrent fractionation, Mass Spectrometry, and Differential Ion Mobility 
+                                    (FAIMS).
+                                </li>
+                                <li class="exp-list-item">
+                                    Demonstrated correlation between differential ion mobility detection and glycopeptide 
+                                    analytes based on backbone variation, glycan composition, and a combination thereof.
+                                </li>
+                                <li class="exp-list-item">
+                                    Analyzed post translationally modified glycoproteins of control and SLE patient serum 
+                                    immunoglobulin searching for correlations to immune response and glycan features based 
+                                    on our previous glycopeptide purification platform.
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">August 2016 - May 2018</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Honors Undergraduate Research Assistant</h3>
+                            <div class="subheading mb-3">University of Oklahoma, PI: Si Wu</div>
+                            <ul class="exp-list-head">
+                                <li class="exp-list-item">
+                                    Conceptualized, designed, and constructed an online affinity capture technique for 
+                                    immunoprecipitation application involving intensive immunoglobulin purification, original 
+                                    apparatus design, and top-down mass spectrometry.
+                                </li>
+                                <li class="exp-list-item">
+                                    ·	Determined activity of novel biomass degrading enzymes from Great Lakes fungal samples 
+                                    through culturing, secretome extraction, enzymatic assays, concentration determination, 
+                                    electrophoresis, liquid chromatography and mass spectrometry.
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">August 2015 - May 2016</span></div>
                     </div>
                 </div>
             </section>
@@ -318,95 +419,7 @@
                         10.1021/jasms.8b05509</a>
                     </p>                </div>
             </section>
-            <hr class="m-0" />
-            <!-- Experience-->
-            <section class="resume-section" id="experience">
-                <div class="resume-section-content">
-                    <h2 class="mb-5">Research Experience</h2>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Graduate Research Assistant</h3>
-                            <div class="subheading mb-3">University of Wisconsin-Madison, PI: Lingjun Li</div>
-                            <ul class="exp-list-head">
-                                <li class="exp-list-item">
-                                    Fabricated and validated PGC-enabled separation strategies that increased peptide and glycopeptide
-                                    coverage by up to 20%.
-                                </li>
-                                <li class="exp-list-item">
-                                    Facilitated higher throughput in microfluidic capillary electrophoresis-driven bottom-up proteomics
-                                    through optimization of data-independent acquisition mass spectrometry.
-                                </li>
-                                <li class="exp-list-item">
-                                    Investigated strategies for high-throughput structural elucidation of active biomolecules by leveraging
-                                    computational modeling in tandem with novel chromatography and ion mobility mass spectrometry.
-                                </li>
-                                <li class="exp-list-item">
-                                    Implementation of informatics pipelines to establish inter- and intrasample quantitative accuracy in 
-                                    dataindependent acquisition bottom-up proteomics.
-                                </li>
-                                <li class="exp-list-item">
-                                    Performed custom informatic analysis of MALDI-MSI datasets to normalize multiplexed datasets, extract
-                                    features of interest, and perform machine learning classification.
-                                </li>
-                                <li class="exp-list-item">
-                                    Deployed custom web-application based solutions for browsing, filtering, and sharing mass spectrometry
-                                    data.
-                                </li>
-                                <li class="exp-list-item">
-                                    Development of novel online multiplexed analysis of bottom-up, middle-down, and top-down
-                                    glycoconjugate species utilizing capillary electrophoresis, porous graphitized carbon liquid
-                                    chromatography, ion mobility spectrometry, and mass spectrometry.
-                                </li>
-                            </ul>
-                            <p></p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2018 - Present</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Graduate Research Assistant</h3>
-                            <div class="subheading mb-3">University of Oklahoma, PI: Si Wu</div>
-                            <ul class="exp-list-head">
-                                <li class="exp-list-item">
-                                    Developed a three-dimensional method of glycopeptide purification and characterization 
-                                    allowing universal application, unbiased separation, and rapid recognition through the 
-                                    use of HPLC, concurrent fractionation, Mass Spectrometry, and Differential Ion Mobility 
-                                    (FAIMS).
-                                </li>
-                                <li class="exp-list-item">
-                                    Demonstrated correlation between differential ion mobility detection and glycopeptide 
-                                    analytes based on backbone variation, glycan composition, and a combination thereof.
-                                </li>
-                                <li class="exp-list-item">
-                                    Analyzed post translationally modified glycoproteins of control and SLE patient serum 
-                                    immunoglobulin searching for correlations to immune response and glycan features based 
-                                    on our previous glycopeptide purification platform.
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2016 - May 2018</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Honors Undergraduate Research Assistant</h3>
-                            <div class="subheading mb-3">University of Oklahoma, PI: Si Wu</div>
-                            <ul class="exp-list-head">
-                                <li class="exp-list-item">
-                                    Conceptualized, designed, and constructed an online affinity capture technique for 
-                                    immunoprecipitation application involving intensive immunoglobulin purification, original 
-                                    apparatus design, and top-down mass spectrometry.
-                                </li>
-                                <li class="exp-list-item">
-                                    ·	Determined activity of novel biomass degrading enzymes from Great Lakes fungal samples 
-                                    through culturing, secretome extraction, enzymatic assays, concentration determination, 
-                                    electrophoresis, liquid chromatography and mass spectrometry.
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2015 - May 2016</span></div>
-                    </div>
-                </div>
-            </section>
+            <!--Funding-->
             <hr class="m-0" />
             <section class="resume-section" id="funding">
                 <div class="resume-section-content">
