adding gary parr award

--- a/index.html
+++ b/index.html
@@ -531,6 +531,10 @@
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            Gary Parr Memorial Award for Outstanding Bioanalytical Graduate Research (2023)
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                             Luminex Summer Fellowship, Department of Chemistry (2022)
                         </li>
                         <li>
