--- a/portfolio.html
+++ b/portfolio.html
@@ -314,6 +314,13 @@
                         <div class="card" style="width: 18rem;">
                             <img class="card-img-top" src="assets/img/Posters/ChemPoster2022_thumb.png" alt="Card image cap">
                             <div class="card-body d-flex flex-column">
+                                <h5 class="card-title">Biomolecular Profiling of Prostate Cancer Through Library-Free Data Independent Acquisition Mass Spectrometry</h5>
+                                <p class="card-text">US HUPO 2023</p>
+                                <a href="assets/img/Posters/USHUPO_2022.pdf" target="_blank" class="mt-auto btn btn-primary">View Poster</a>
+                            </div>
+                        <div class="card" style="width: 18rem;">
+                            <img class="card-img-top" src="assets/img/Posters/ChemPoster2022_thumb.png" alt="Card image cap">
+                            <div class="card-body d-flex flex-column">
                                 <h5 class="card-title">Sample Agnostic Spectral Libraries Enhance Proteomic Coverage in Sample-Limited Data 
                                                        Independent Analyses</h5>
                                 <p class="card-text">Chemistry Research Presentation 2022</p>
