--- a/portfolio.html
+++ b/portfolio.html
@@ -312,11 +312,12 @@
                     <h2 class="mb-5">Posters</h2>
                     <div class="card-table">
                         <div class="card" style="width: 18rem;">
-                            <img class="card-img-top" src="assets/img/Posters/ChemPoster2022_thumb.png" alt="Card image cap">
+                            <img class="card-img-top" src="assets/img/Posters/USHUPO_2023_thumb.png" alt="Card image cap">
                             <div class="card-body d-flex flex-column">
-                                <h5 class="card-title">Biomolecular Profiling of Prosate Cancer Through Library-Free Data Independent Acquisition Mass Spectrometry</h5>
+                                <h5 class="card-title">Revealing Systematic Proteomic Remodeling through Library-Free DIA-MS Analysis of a 
+                                    Novel Progressive Prostate Cancer Cell Model</h5>
                                 <p class="card-text">US HUPO 2023</p>
-                                <a href="assets/img/Posters/USHUPO_2022.pdf" target="_blank" class="mt-auto btn btn-primary">View Poster</a>
+                                <a href="assets/img/Posters/USHUPO_2023.png" target="_blank" class="mt-auto btn btn-primary">View Poster</a>
                             </div>
                         </div>
                         <div class="card" style="width: 18rem;">
