add titles, nat comm scims

--- a/portfolio.html
+++ b/portfolio.html
@@ -95,6 +95,7 @@
                             <img class="card-img-top" src="assets/img/Manuscript/JASMS_PGC_2022.png" alt="JASMS Graphical Abstract">
                             <div class="card-body d-flex flex-column">
                                 <h5 class="card-title">Higher Temperature Porous Graphitic Carbon Separations Differentially Impact Distinct Glycopeptide Classes</h5>
+                                <p class="card-pub-title">Journal of the American Society for Mass Spectrometry</p>
                                 <p class="card-text">Investigations of the optimal chromatographic conditions that promote identification efficiency and optimal
                                     liquid phase resolution.
                                 </p>
@@ -106,6 +107,7 @@
                             <div class="card-body d-flex flex-column">
                                 <h5 class="card-title">High-End Ion Mobility Mass Spectrometry:  A Current Review of Analytical Capacity in Omics 
                                     Applications and Structural Investigations</h5>
+                                <p class="card-pub-title">Trends in Analytical Chemistry</p>
                                 <p class="card-text">Review of high-end ion mobility instrumentation and their suitability in metabolomics/proteomics investigations,
                                     as well as their capacity for structural elucidation.</p>
                                 <a href="https://doi.org/10.1016/j.trac.2022.116761" target="_blank" class="mt-auto btn btn-primary">Read</a>
@@ -116,6 +118,7 @@
                             <div class="card-body d-flex flex-column">
                                 <h5 class="card-title">Complementary proteome and glycoproteome access revealed through comparative 
                                     analysis of reversed phase and porous graphitic carbon chromatography</h5>
+                                    <p class="card-pub-title">Analytical & Bioanalytical Chemistry</p>
                                     <p class="card-text">First reports of porous graphitic carbon for untargeted glycoproteomics compared
                                         to traditional reversed phase liquid chromatography.</p>
                                         <a href="https://doi.org/10.1007/s00216-022-03934-7" target="_blank" class="mt-auto btn btn-primary">Read</a>
@@ -125,6 +128,7 @@
                             <img class="card-img-top" src="assets/img/Manuscript/RSC_Rev_2021.png" alt="RSC-ChemBio Review Image">
                             <div class="card-body d-flex flex-column">
                                 <h5 class="card-title">Recent developments and applications of quantitative proteomics strategies for high-throughput biomolecular analyses in cancer research</h5>
+                                <p class="card-pub-title">RSC Chemical Biology</p>
                                 <p class="card-text">Review of recent applications and associated advancements in quantitative proteomics
                                                      applications in cancer research.</p>
                                 <a href="https://doi.org/10.1039/D1CB00039J" target="_blank" class="mt-auto btn btn-primary">Read</a>
@@ -134,15 +138,28 @@
                             <img class="card-img-top" src="assets/img/Manuscript/MCP_Rev_2020.png" alt="MCP Review Image">
                             <div class="card-body d-flex flex-column">
                                 <h5 class="card-title">Recent Advances in Analytical Approaches for Glycan and Glycopeptide Quantitation</h5>
+                                <p class="card-pub-title">Mollecular & Cellular Proteomics</p>
                                 <p class="card-text">Review of experimental considerations and advancements for quantitative glycomics and
                                     glycopeptidomics over the years 2010-2020.</p>
                                     <a href="https://doi.org/10.1074/mcp.R120.002095" target="_blank" class="mt-auto btn btn-primary">Read</a>
                             </div>
                         </div>
                         <div class="card" style="width: 18rem;">
+                            <img class="card-img-top" src="assets/img/Manuscript/NatMeth_SCIMS.png" alt="Single Cell IMaging">
+                            <div class="card-body d-flex flex-column">
+                                <h5 class="card-title">Mass spectrometry imaging: the rise of spatially resolved single-cell omics</h5>
+                                <p class="card-pub-title">Nature Methods</p>
+                                <p class="card-text">Commentary on the rapidly growing interest of single-cell biomolecular analyses and discussion
+                                                      over the the analytical merit and biological significance of single-cell mass spectrometry imaging.  
+                                </p>
+                                <a href="https://www.nature.com/articles/s41592-023-01774-6" target="_blank" class="mt-auto btn btn-primary">Read</a>
+                            </div>
+                        </div>
+                        <div class="card" style="width: 18rem;">
                             <img class="card-img-top" src="assets/img/Manuscript/ACS_Citrullination.jpeg" alt="Citrullination TOC Image">
                             <div class="card-body d-flex flex-column">
                                 <h5 class="card-title">Enabling Global Analysis of Protein Citrullination via Biotin Thiol Tag-Assisted Mass Spectrometry</h5>
+                                <p class="card-pub-title">Analytical Chemistry</p>
                                 <p class="card-text">Validation of a novel biotin tag capable of selectively enriching citrullinated peptides from
                                                      complex samples and the use of mass spectrometry for confident identification.</p>
                                 <a href="https://doi.org/10.1021/acs.analchem.2c03844" target="_blank" class="mt-auto btn btn-primary">Read</a>
@@ -152,6 +169,7 @@
                             <img class="card-img-top" src="assets/img/Manuscript/NatMeth_LactylLysine.png" alt="Nat Methods Figure 1">
                             <div class="card-body d-flex flex-column">
                                 <h5 class="card-title">Cyclic immonium ion of lactyllysine reveals widespread lactylation in the human proteome</h5>
+                                <p class="card-pub-title">Nature Methods</p>
                                 <p class="card-text">A novel diagnostic ion-based strategy, to confidently identify new lactylation events, unveiling a 
                                                         wide lactylproteome landscape that had previously been confined to lactylated histones.</p>
                                 <a href="https://www.nature.com/articles/s41592-022-01523-1" target="_blank" class="mt-auto btn btn-primary">Read</a>
@@ -161,6 +179,7 @@
                             <img class="card-img-top" src="assets/img/Manuscript/ECM_Nat_Com.png" alt="MCP Review Image">
                             <div class="card-body d-flex flex-column">
                                 <h5 class="card-title">Proteome-wide and Matrisome-specific Alterations during Human Pancreas Development and Maturation</h5>
+                                <p class="card-pub-title">Nature Communications</p>
                                 <p class="card-text">This comprehensive proteomics analysis contributes to an improved understanding of the critical roles that 
                                                      ECM plays throughout human pancreas development and maturation.</p>
                                 <a href="https://www.nature.com/articles/s41467-021-21261-w" target="_blank" class="mt-auto btn btn-primary">Read</a>
@@ -170,6 +189,7 @@
                             <img class="card-img-top" src="assets/img/Manuscript/Peroxy_Abs.jpeg" alt="Card image cap">
                             <div class="card-body d-flex flex-column">
                                 <h5 class="card-title">Peroxymonosulfate Oxidizes Amino Acids in Water without Activation</h5>
+                                <p class="card-pub-title">ACS Environmental Science</p>
                                 <p class="card-text">Peroxymonosulfate is capable of oxidizing 19 amino acids without explicit activation and
                                                     that solvent-exposed methionine and tryptophan residues are likely initial targets of
                                                     oxidation in peptides and proteins.</p>
@@ -181,6 +201,7 @@
                             <div class="card-body d-flex flex-column">
                                 <h5 class="card-title">Improved Structural Elucidation of Peptide Isomers and
                                                     Their Receptors Using Advanced Ion Mobility-Mass Spectrometry</h5>
+                                <p class="card-pub-title">Trends in Analytical Chemistry</p>
                                 <p class="card-text">We explore the usefulness of ion mobility techniques in probing structurally-critical
                                                     biomolecules, examining the ability of current methods to elucidate neuropeptide
                                                     stereoisomers and receptors.</p>
@@ -192,6 +213,7 @@
                             <div class="card-body d-flex flex-column">
                                 <h5 class="card-title">Finding Biomass Degrading Enzymes Through an Activity-Correlated
                                                     Quantitative Proteomics Platform (ACPP)</h5>
+                                <p class="card-pub-title">Journal of the American Society for Mass Spectrometry</p>
                                 <p class="card-text">The results demonstrated that the ACPP facilitated the discovery of bioactive enzymes
                                                     from complex protein samples in a high-throughput, multiplexing, and untargeted fashion.</p>
                                 <a href="https://pubs.acs.org/doi/10.1007/s13361-016-1569-8" target="_blank" class="mt-auto btn btn-primary">Read</a>
@@ -264,8 +286,8 @@
                             Fragile X Syndrome Mouse Model”. (Under Revision). <a href="https://www.biorxiv.org/content/10.1101/2021.11.09.467989v1">10.1101/2021.11.09.467989</a>
                         </p>
                         <p class="pub-text">
-                            H. Zhang, <b>D.G. Delafield</b>, L. Li (2023) "Mass spectrometry imaging: the rise of spatially resolved single-cell omics," <i>Nature Methods</i>. 
-                            (Accepted).
+                            H. Zhang, <b>D.G. Delafield</b>, L. Li (2023) "Mass spectrometry imaging: the rise of spatially resolved single-cell omics," <i>Nature Methods</i> 
+                            20, 327-330. <a href="www.nature.com/articles/s41592-023-01774-6">10.1038/s41592-023-01774-6</a>
                         </p>
                         <p class="pub-text">
                             Y Shi, Z. Li, B. Wang, Z. Ye, H. Ye, <b>D.G. Delafield</b>, X. Shi, Z. Chen, F. Ma, L. Li (2022) "Enabling Global Analysis of Protein 
