--- a/index.html
+++ b/index.html
@@ -380,8 +380,8 @@
                         Fragile X Syndrome Mouse Model”. (Under Revision). <a href="https://www.biorxiv.org/content/10.1101/2021.11.09.467989v1">10.1101/2021.11.09.467989</a>
                     </p>
                     <p class="pub-text">
-                        H. Zhang, <b>D.G. Delafield</b>, L. Li (2023) "Mass spectrometry imaging: the rise of spatially resolved single-cell omics," <i>Nature Methods</i>. 
-                        (Accepted).
+                        H. Zhang, <b>D.G. Delafield</b>, L. Li (2023) "Mass spectrometry imaging: the rise of spatially resolved single-cell omics," <i>Nature Methods</i> 
+                        20, 327-330. <a href="www.nature.com/articles/s41592-023-01774-6">10.1038/s41592-023-01774-6</a>
                     </p>
                     <p class="pub-text">
                         Y Shi, Z. Li, B. Wang, Z. Ye, H. Ye, <b>D.G. Delafield</b>, X. Shi, Z. Chen, F. Ma, L. Li (2022) "Enabling Global Analysis of Protein 
