adding poster links

--- a/portfolio.html
+++ b/portfolio.html
@@ -247,9 +247,18 @@
                                 10.1074/mcp.R120.002095</a>
                         </p>
                         <p class="pub-text">
+                            <b>D.G. Delafield</b>, H.N. Miles, W.A. Ricke, L. Li. "Proteomic Fingerprinting of Prostate Cancer Progression Through Library-Free DIA-MS Reveals 
+                            Systematic and Conserved Pathway Dysregulation." (In Submission) <a href="https://grahamdelafield.github.io/assets/img/Posters/USHUPO_2023.png">Poster Available</a>
+                        </p>
+                        <p class="pub-text">
+                            <b>D.G. Delafield†</b>, X. Zhong†, L. Li, (2022). "Sample Agnostic Spectral Libraries Enable Quantitation of >9,300 Cerebrospinal 
+                            Fluid Proteins Across Neurodegenerative Disease Patient Cohorts." (In Submission) († Co-First Authors) <a href="https://grahamdelafield.github.io/assets/img/Posters/ChemPoster2022.png">
+                                Poster Available</a>
+                        </p>
+                        <p class="pub-text">
                             <b>D.G. Delafield</b>, H.N. Miles, T.N. Liu, W.A. Ricke, L. Li. “Inclusion of Porous Graphitic Carbon Chromatography Yields Greater 
                             Protein Identification, Compartment and Process Coverage, and Enables More Reflective Protein-Level Label-Free Quantitation.” 
-                            (In Preparation)
+                            (In Submission)
                         </p>
                         <p class="pub-text">
                             <b>D.G. Delafield</b>, H.N. Miles, W.A. Ricke, L. Li. “Six-plex Isobaric Labeling Reveals Glycosylation Dysregulation Across 
@@ -260,16 +269,8 @@
                             Prostatic Tumorigenesis Discovery Through Porous Graphitic Carbon DIA-MS.” (In Preparation)
                         </p>
                         <p class="pub-text">
-                            <b>D.G. Delafield†</b>, X. Zhong†, L. Li, (2022). "Sample Agnostic Spectral Libraries Enable Quantitation of >9,300 Cerebrospinal 
-                            Fluid Proteins Across Neurodegenerative Disease Patient Cohorts." (In preparaton) († Co-First Authors)
-                        </p>
-                        <p class="pub-text">
                             <b>D.G. Delafield†</b>, X. Zhong†, L. Li. "Enhanced Proteomic Coverage Enabled through BoxCar DIA and Sample Agnostic Spectral 
                             Libraries." (In Preparation) († Co-First Authors)
-                        </p>
-                        <p class="pub-text">
-                            <b>D.G. Delafield</b>, H.N. Miles, W.A. Ricke, L. Li. "Sample Agnostic Spectral Libraries Reveal Underlying Molecular Pathways in 
-                            Aggressive Metastatic Prostate Cancer." (In Preparation)
                         </p>
                         <p class="pub-text">
                             G. Li, C. Jeon, M. Ma, Z. Zheng, <b>D.G. Delafield</b>, E. Romanova, J. Sweedler, B. Ruotolo, L. Li,
