--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
                         </p>
                         <p class="pub-text">
                             H. Zhang, <b>D.G. Delafield</b>, L. Li (2023) "Mass spectrometry imaging: the rise of spatially resolved single-cell omics," <i>Nature Methods</i> 
-                            20, 327-330. <a href="www.nature.com/articles/s41592-023-01774-6">10.1038/s41592-023-01774-6</a>
+                            20, 327-330. <a href="https://www.nature.com/articles/s41592-023-01774-6">10.1038/s41592-023-01774-6</a>
                         </p>
                         <p class="pub-text">
                             Y Shi, Z. Li, B. Wang, Z. Ye, H. Ye, <b>D.G. Delafield</b>, X. Shi, Z. Chen, F. Ma, L. Li (2022) "Enabling Global Analysis of Protein 
