--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <div class="resume-section-content">
                     <h1 class="mb-0">
                         Graham
-                        <span class="text-primary">Delafield</span>
+                        <span class="text-primary">Delafield</span>, Ph.D.
                     </h1>
                     <div class="subheading mb-5">
                         645 Skyview Place · Madison, WI 53713 · (405) 219-4741 ·
@@ -249,8 +249,8 @@
                     <h2 class="mb-5">Education</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">University of Wisconsin-Madison</h3>
-                            <div class="subheading mb-3">Doctor of Philosophy</div>
+                            <h3 class="mb-0">Doctor of Philosophy</h3>
+                            <div class="subheading mb-3">University of Wisconsin-Madison</div>
                             <ul class="exp-list-head">
                                 <li class="ed-list-item">
                                     Primary field: Chemistry
@@ -263,12 +263,12 @@
                                 </li>
                             </ul>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2018 - (May 2023)</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">August 2018 - March 2023</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">University of Oklahoma</h3>
-                            <div class="subheading mb-3">Master of Science</div>
+                            <h3 class="mb-0">Master of Science</h3>
+                            <div class="subheading mb-3">University of Oklahoma</div>
                             <ul class="exp-list-head">
                                 <li class="ed-list-item">
                                     Primary field: Chemistry
@@ -285,8 +285,8 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">University of Oklahoma</h3>
-                            <div class="subheading mb-3">Bachelor of Science</div>
+                            <h3 class="mb-0">Bachelor of Science</h3>
+                            <div class="subheading mb-3">University of Oklahoma</div>
                             <ul class="exp-list-head">
                                 <li class="ed-list-item">
                                     Major: Biochemistry
