--- a/portfolio.html
+++ b/portfolio.html
@@ -47,7 +47,7 @@
                 <div class="resume-section-content">
                     <h1 class="mb-0">
                         Graham
-                        <span class="text-primary">Delafield</span>
+                        <span class="text-primary">Delafield</span>, Ph.D.
                     </h1>
                     <div class="subheading mb-5">
                         645 Skyview Place · Madison, WI 53713 · (405) 219-4741 ·
@@ -412,6 +412,20 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Oral Presentations</h2>
                     <div class="card-table">
+                        <div class="card" style="width: 18rem;">
+                            <img class="card-img-top" src="assets/img/Presentations/ThesisDefense.png" alt="Thesis Defense Title Slide">
+                            <div class="card-body d-flex flex-column">
+                                <h5 class="card-title">Standing in the Way of Proteome Profiling Depth: How the Selection
+                                                       of Chromatography and Mass Spectrometry Data Acquisition Limit Our
+                                                       View of the Proteome
+                                </h5>
+                                <p class="card-text">PhD Thesis Defense 2023</p>
+                                <div class="btn-group">
+                                    <a href="assets/img/Presentations/GrahamDelafield_PhD_ThesisDefense.pdf" target="blank" class="mt-auto btn btn-primary" style="margin-right: 0.25rem;">View</a>
+                                    <a href="https://youtu.be/7xsCfX68BPU" target="blank" class="mt-auto btn btn-primary" style="margin-left: 0.25rem">Watch</a>
+                                </div>
+                            </div>
+                        </div>
                         <div class="card" style="width: 18rem;">
                             <img class="card-img-top" src="assets/img/Presentations/GrahamDelafield_SampAgnLib_WPS2022.png" alt="WPS 2022">
                             <div class="card-body d-flex flex-column">
