adding lipid papers

--- a/index.html
+++ b/index.html
@@ -376,6 +376,16 @@
                             Nervous System of the Atlantic Blue Crab, Callinectes sapidus," <i>Analytical Chemistry</i>. (To Be Submitted).
                         </p>
                         <p class="pub-text">
+                            Z. Zhu, S. Xu, Z. Wang, <b>D.G. Delafield</b>, M.J. Rigby, G. Lu, T. Gu, P. Liu, M. Ma, L. Puglielli, L. Li, 
+                            "Chiral Pair Isobaric Labeling Strategy for Multiplexed Absolute Quantitation (CHRISTMAS) Enabled Quantitatively 
+                            Probing of Enantiomeric Amino Acids Alteration in Alzheimer's Disease Progression." In Submission.
+                        </p>
+                        <p class="pub-text">
+                            S. Xu, Z. Zhu, <b>D.G. Delafield</b>, M.J. Rigby, G. Lu, L. Puglielli, L. Li, "Spatially and Temporally Probing 
+                            Distinctive Glycerophospholipid Alteration In Alzheimer's Disease Mouse Brain Via High-Resolution Ion Mobility-Enabled
+                            sn-Position-Resolved Lipidomics." In Submission.
+                        </p>
+                        <p class="pub-text">
                             M. Ma, Q. Yu, <b>D.G. Delafield</b>, Y. Cui, Z. Li, W. Wu, X. Shi, A. Gutierrez, P.R. Westmark, M. Xu, C.J. Westmark, L. Li (2022) 
                             “On-tissue Spatial Proteomics Integrating MALDI-MS Imaging with Shotgun Proteomics Reveals Soy Consumption-induced Biomarkers in a 
                             Fragile X Syndrome Mouse Model”. (Under Revision). <a href="https://www.biorxiv.org/content/10.1101/2021.11.09.467989v1">10.1101/2021.11.09.467989</a>
