--- a/portfolio.html
+++ b/portfolio.html
@@ -145,6 +145,17 @@
                             </div>
                         </div>
                         <div class="card" style="width: 18rem;">
+                            <img class="card-img-top" src="assets/img/Manuscript/ChemSci_AB42.png" alt="Chem Sci AB42">
+                            <div class="card-body d-flex flex-column">
+                                <h5 class="card-title">Site-specific Chirality-conferred Structural Compaction Differentially Mediates the Cytotoxicity 
+                                                       of AB42</h5>
+                                <p class="card-pub-title">Chemical Science</p>
+                                <p class="card-text">Primary research conferring the significance of D-amino acid participation in AB42 oligomerization and their 
+                                    contribution towards cytotoxicity.</p>
+                                <a href="https://pubs.rsc.org/en/content/articlepdf/2023/SC/D3SC00678F?page=search" target="_blank" class="mt-auto btn btn-primary">Read</a>
+                            </div>
+                        </div>
+                        <div class="card" style="width: 18rem;">
                             <img class="card-img-top" src="assets/img/Manuscript/NatMeth_SCIMS.png" alt="Single Cell IMaging">
                             <div class="card-body d-flex flex-column">
                                 <h5 class="card-title">Mass spectrometry imaging: the rise of spatially resolved single-cell omics</h5>
@@ -244,16 +255,16 @@
                         <p class="pub-text">
                             <b>D.G. Delafield</b>, L. Li, (2020). "Recent Advances in Analytical Approaches for Glycan and Glycopeptide Quantitation." 
                             <i>Molecular & Cellular Proteomics</i>. Published online June 23, 2020. <a href="https://doi.org/10.1074/mcp.R120.002095">
-                                10.1074/mcp.R120.002095</a>
+                            10.1074/mcp.R120.002095</a>
                         </p>
                         <p class="pub-text">
                             <b>D.G. Delafield</b>, H.N. Miles, W.A. Ricke, L. Li. "Proteomic Fingerprinting of Prostate Cancer Progression Through Library-Free DIA-MS Reveals 
                             Systematic and Conserved Pathway Dysregulation." (In Submission) <a href="https://grahamdelafield.github.io/assets/img/Posters/USHUPO_2023.png">Poster Available</a>
                         </p>
                         <p class="pub-text">
-                            <b>D.G. Delafield†</b>, X. Zhong†, L. Li, (2022). "Sample Agnostic Spectral Libraries Enable Quantitation of >9,300 Cerebrospinal 
+                            <b>D.G. Delafield†</b>, X. Zhong†, L. Li. "Sample Agnostic Spectral Libraries Enable Quantitation of >9,300 Cerebrospinal 
                             Fluid Proteins Across Neurodegenerative Disease Patient Cohorts." (In Submission) († Co-First Authors) <a href="https://grahamdelafield.github.io/assets/img/Posters/ChemPoster2022.png">
-                                Poster Available</a>
+                            Poster Available</a>
                         </p>
                         <p class="pub-text">
                             <b>D.G. Delafield</b>, H.N. Miles, T.N. Liu, W.A. Ricke, L. Li. “Inclusion of Porous Graphitic Carbon Chromatography Yields Greater 
@@ -273,11 +284,6 @@
                             Libraries." (In Preparation) († Co-First Authors)
                         </p>
                         <p class="pub-text">
-                            G. Li, C. Jeon, M. Ma, Z. Zheng, <b>D.G. Delafield</b>, E. Romanova, J. Sweedler, B. Ruotolo, L. Li,
-                            "Site-specific Chirality-conferred Structural Compaction Differentially Rescues the Cytotoxicity of Aβ42" <i>Angewante 
-                            Chemie</i>. (In Submission)
-                        </p>
-                        <p class="pub-text">
                             Y. Liu, <b>D.G. Delafield</b>, L. Li "Comprehensive Mass Spectrometric Characterization of Neuropeptidome in 
                             Nervous System of the Atlantic Blue Crab, Callinectes sapidus," <i>Analytical Chemistry</i>. (To Be Submitted).
                         </p>
@@ -292,6 +298,12 @@
                             sn-Position-Resolved Lipidomics." In Submission.
                         </p>
                         <p class="pub-text">
+                            G. Li, C.K. Jeon, M. Ma, Z. Zheng, Y. Jia, Z. Zheng, <b>D.G. Delafield</b>, G. Lu, E. Romanova, J. Sweedler, B. Ruotolo, L. Li,
+                            "Site-specific Chirality-conferred Structural Compaction Differentially Rescues the Cytotoxicity of Aβ42"<i>Chemical 
+                            Science</i>. Published online May 8, 2023. <a href="https://pubs.rsc.org/en/content/articlepdf/2023/SC/D3SC00678F?page=search">
+                            10.1039/D3SC00678F</a>
+                        </p>
+                        <p class="pub-text">
                             M. Ma, Q. Yu, <b>D.G. Delafield</b>, Y. Cui, Z. Li, W. Wu, X. Shi, A. Gutierrez, P.R. Westmark, M. Xu, C.J. Westmark, L. Li (2022) 
                             “On-tissue Spatial Proteomics Integrating MALDI-MS Imaging with Shotgun Proteomics Reveals Soy Consumption-induced Biomarkers in a 
                             Fragile X Syndrome Mouse Model”. (Under Revision). <a href="https://www.biorxiv.org/content/10.1101/2021.11.09.467989v1">10.1101/2021.11.09.467989</a>
@@ -303,7 +315,7 @@
                         <p class="pub-text">
                             Y Shi, Z. Li, B. Wang, Z. Ye, H. Ye, <b>D.G. Delafield</b>, X. Shi, Z. Chen, F. Ma, L. Li (2022) "Enabling Global Analysis of Protein 
                             Citrullination and Homocitrullination via Biotin Thiol Tag-Assisted Mass Spectrometry." <i>Analytical Chemistry</i>. Published online 
-                            Decmber 13, 2022. <a href="https://doi.org/10.1021/acs.analchem.2c03844">10.1021/acs.analchem.2c03844</a>.
+                            December 13, 2022. <a href="https://doi.org/10.1021/acs.analchem.2c03844">10.1021/acs.analchem.2c03844</a>.
                         </p>
                         <p class="pub-text">
                             N. Wang, N. Wang, S. Yu, H. Zhang, S. Tang, D. Wang, W. Lu, H. Li, <b>D.G. Delafield</b>, 
