--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
                     </p>
                     <p class="pub-text">
                         Y. Liu, <b>D.G. Delafield</b>, L. Li "Comprehensive Mass Spectrometric Characterization of Neuropeptidome in 
-                        Nervous System of the Atlantic Blue Crab, Callinectes sapidus," <i>Analytical Chemistry</i>. (To Be Submitted).
+                        Nervous System of the Atlantic Blue Crab, Callinectes sapidus." <i>Analytical Chemistry</i>. (To Be Submitted).
                     </p>
                     <p class="pub-text">
                         Z. Zhu, S. Xu, Z. Wang, <b>D.G. Delafield</b>, M.J. Rigby, G. Lu, T. Gu, P. Liu, M. Ma, L. Puglielli, L. Li, 
@@ -382,14 +382,14 @@
                     </p>
                     <p class="pub-text">
                         G. Li, C.K. Jeon, M. Ma, Z. Zheng, Y. Jia, Z. Zheng, <b>D.G. Delafield</b>, G. Lu, E. Romanova, J. Sweedler, B. Ruotolo, L. Li,
-                        "Site-specific Chirality-conferred Structural Compaction Differentially Rescues the Cytotoxicity of Aβ42"<i>Chemical 
+                        "Site-specific Chirality-conferred Structural Compaction Differentially Rescues the Cytotoxicity of Aβ42." <i>Chemical 
                         Science</i>. Published online May 8, 2023. <a href="https://pubs.rsc.org/en/content/articlepdf/2023/SC/D3SC00678F?page=search">
                         10.1039/D3SC00678F</a>
                     </p>
                     <p class="pub-text">
                         M. Ma, Q. Yu, <b>D.G. Delafield</b>, Y. Cui, Z. Li, W. Wu, X. Shi, A. Gutierrez, P.R. Westmark, M. Xu, C.J. Westmark, L. Li (2022) 
                         “On-tissue Spatial Proteomics Integrating MALDI-MS Imaging with Shotgun Proteomics Reveals Soy Consumption-induced Biomarkers in a 
-                        Fragile X Syndrome Mouse Model”. (Under Revision). <a href="https://www.biorxiv.org/content/10.1101/2021.11.09.467989v1">10.1101/2021.11.09.467989</a>
+                        Fragile X Syndrome Mouse Model.” (Under Revision). <a href="https://www.biorxiv.org/content/10.1101/2021.11.09.467989v1">10.1101/2021.11.09.467989</a>
                     </p>
                     <p class="pub-text">
                         H. Zhang, <b>D.G. Delafield</b>, L. Li (2023) "Mass spectrometry imaging: the rise of spatially resolved single-cell omics," <i>Nature Methods</i> 
@@ -403,13 +403,13 @@
                     <p class="pub-text">
                         N. Wang, N. Wang, S. Yu, H. Zhang, S. Tang, D. Wang, W. Lu, H. Li, <b>D.G. Delafield</b>, 
                         Y. Kong, X. Wang, C. Shao, L. Lv, G. Wang, R. Tan, N. Wang, H. Hao, H. Ye (2022) “Cyclic Immonium Ion 
-                        of Lactyllysine Reveals Widespread Lactylation in the Human Proteome” <i>Nature Methods</i>. Published online June 28, 2022.
+                        of Lactyllysine Reveals Widespread Lactylation in the Human Proteome.” <i>Nature Methods</i>. Published online June 28, 2022.
                         <a href="https://www.nature.com/articles/s41592-022-01523-1">10.1038/s41592-022-01523-1</a>
                     </p>
                     <p class="pub-text">
                         Z. Li, D. M. Tremmel, F. Ma, Q. Yu, M. Ma, <b>D.G. Delafield</b>, Y. Shi, B. Wang, S. A. Mitchell, A. K. Feeney,
                         V. S. Jain, S. D. Sackett, J. S. Odorico, L. Li (2020) "Proteome-wide and Matrisome-specific Alterations 
-                        during Human Pancreas Development and Maturation," <i>Nature Communications</i>. Published online February 15, 2021.
+                        during Human Pancreas Development and Maturation" <i>Nature Communications</i>. Published online February 15, 2021.
                         <a href="https://www.nature.com/articles/s41467-021-21261-w">10.1038/s41467-021-21261-w</a>
                     </p>
                     <p class="pub-text">
